--- a/_includes/social.html
+++ b/_includes/social.html
@@ -3,6 +3,9 @@
     {% if site.github %}
 	  <a href="http://github.com/{{ site.github }}"><i class="fa fa-github"></i></a>
     {% endif %}
+    {% if site.github %}
+        <a href="https://instagram.com/{{ site.insta }}"><i class="fa fa-instagram"></i></a>
+    {% endif %}
     {% if site.email %}
 	  <a href="mailto:{{ site.email}}"><i class="fa fa-envelope"></i></a>
     {% endif %}
