--- a/static/css/main.css
+++ b/static/css/main.css
@@ -194,3 +194,22 @@ div.footer {
   padding-bottom: 15px;
   
 }*/
+
+.tag {
+  display: inline-block;
+  background-color: #5cb85c;
+  padding: 0.2em 0.6em 0.3em;
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 1;
+  opacity: 0.6;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: 0.25em;
+  cursor: pointer;
+}
+.tag.selected {
+  opacity: 1;
+}
